Added category route
